--- a/index.html
+++ b/index.html
@@ -45,17 +45,26 @@
                     <h1>Trivia Game</h1>
                 </div>
             </div>
-        </div>
-
-        <footer class="bg-dark">
-            <div>
-                Copyright &copy;
+            <div class="row">
+                <div class="col">
+                <div class="jumbotron">
+                    <button class="btn btn-primary">Давай!</button>
+                </div>
+                <h2 id="time">00:00</h2>
+                <div id="game">GAME</div>
             </div>
-        </footer>
+        </div>
+    </div>
+
+    <footer class="bg-dark">
+        <div>
+            Copyright &copy;
+        </div>
+    </footer>
     </div>
 
     <!-- Optional JavaScript -->
-    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/questions.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
