created questions array and function to display questions in browser

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="jumbotron">
                     <button class="btn btn-primary">Давай!</button>
                 </div>
-                <h2 id="time">00:00</h2>
-                <div id="game">GAME</div>
+                <h2 id="time"></h2>
+                <div id="game"></div>
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
     </div>
 
     <!-- Optional JavaScript -->
-    <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/questions.js"></script>
+    <script src="assets/javascript/app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
