--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>Trivia Game | Willie Edwards</title>
 </head>
@@ -47,20 +48,20 @@
             </div>
             <div class="row">
                 <div class="col">
-                <div class="jumbotron">
-                    <button class="btn btn-primary">Давай!</button>
+                    <div class="jumbotron">
+                        <button class="btn btn-primary">Давай!</button>
+                    </div>
+                    <h2 id="time"></h2>
+                    <div id="game"></div>
                 </div>
-                <h2 id="time"></h2>
-                <div id="game"></div>
             </div>
         </div>
-    </div>
 
-    <footer class="bg-dark">
-        <div>
-            Copyright &copy;
-        </div>
-    </footer>
+        <footer class="bg-dark">
+            <div>
+                Copyright &copy;
+            </div>
+        </footer>
     </div>
 
     <!-- Optional JavaScript -->
