added random image function for right or wrong answer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col">
                     <div class="jumbotron">
-                        <button class="btn btn-primary">Давай!</button>
+                        <button class="btn btn-primary" id="start">Давай!</button>
                     </div>
                     <h2 id="time"></h2>
                     <div id="game"></div>
