cleaned up app.js and bolded correct answers

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             </div>
             <div class="row">
                 <div class="col">
+                    <h2 id="time"></h2>
                     <div class="jumbotron">
+                        <h3>You must prove your loyalty to the Motherland!</h3>
                         <button class="btn btn-primary" id="start">Давай!</button>
                     </div>
-                    <h2 id="time"></h2>
                 </div>
             </div>
         </div>
