--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
 
     <div class="main-container">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">Willie Edwards</a>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <a class="navbar-brand" href="#">Вилиам Едвардс</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <footer class="bg-dark">
+        <footer>
             <div>
                 Copyright &copy;
             </div>
