Updated quiz intro and added flavicon in html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>Trivia Game | Willie Edwards</title>
+    <link rel="icon" type="image/png" href="assets/images/russian-flag.png">
 </head>
 
 <body>
@@ -51,8 +52,12 @@
                 <div class="col">
                     <h2 id="time"></h2>
                     <div class="jumbotron">
-                        <h3>You must prove your loyalty to the Motherland!</h3>
+                        <h4>How well do you know Russia?</h4>
+                        <h4>Answer these questions to find out!</h4>
+                        <h4>You have 15 seconds to answer each question.</h4>
+                        <h4>Answer wrong and suffer the consequences...</h4>
                         <button class="btn btn-primary" id="start">Давай!</button>
+                        <audio id="audio" src="assets/images/bochka-bass-kolbaser.mp3"></audio>
                     </div>
                 </div>
             </div>
