--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="main-container">
         <nav class="navbar navbar-expand-lg bg-light">
-            <a class="navbar-brand" href="#">Вилиам Едвардс</a>
+            <a class="navbar-brand" href="https://willieedwards.github.io/bootstrap-portfolio/">Вилиам Едвардс</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
