added national anthem to play on start

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h4>You have 15 seconds to answer each question.</h4>
                         <h4>Answer wrong and suffer the consequences...</h4>
                         <button class="btn btn-primary" id="start">Давай!</button>
-                        <audio id="audio" src="assets/images/bochka-bass-kolbaser.mp3"></audio>
+                        <audio id="audio" src="assets/audio/anthem.mp3"></audio>
                     </div>
                 </div>
             </div>
