--- a/index.html
+++ b/index.html
@@ -15,59 +15,36 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>Trivia Game | Willie Edwards</title>
-    <link rel="icon" type="image/png" href="assets/images/russian-flag.png">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 </head>
 
 <body>
 
-    <div class="main-container">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <a class="navbar-brand" href="https://willieedwards.github.io/bootstrap-portfolio/">Вилиам Едвардс</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://willieedwards.github.io/bootstrap-portfolio/contact.html">Contact</a>
-                    </li>
-                </ul>
+    <header>
+        <p class="links"> <a href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
+                href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
+    </header>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-3">
+                <h2 id="time"></h2>
             </div>
-        </nav>
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>Trivia Game</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <h2 id="time"></h2>
-                    <div class="jumbotron">
-                        <h4>How well do you know Russia?</h4>
-                        <h4>Answer these questions to find out!</h4>
-                        <h4>You have 15 seconds to answer each question.</h4>
-                        <h4>Answer wrong and suffer the consequences...</h4>
-                        <button class="btn btn-primary" id="start">Давай!</button>
-                        <audio id="audio" src="assets/audio/anthem.mp3"></audio>
-                    </div>
-                </div>
-            </div>
+            <div class="col-md-4"></div>
         </div>
-
-        <footer>
-            <div>
-                Copyright &copy;
-            </div>
-        </footer>
+        <div class="jumbotron">
+            <br>
+            <br>
+            <h4>How well do you know Russia?</h4>
+            <h4>Answer these questions to find out!</h4>
+            <h4>You have 15 seconds to answer each question.</h4>
+            <br>
+            <button class="btn btn-primary" id="start">Давай!</button>
+            <audio id="audio" src="assets/audio/anthem.mp3"></audio>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
