--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-md-4"></div>
         </div>
         <div class="jumbotron">
-            <br>
+            <h1>Russian Trivia</h1>
             <br>
             <h4>How well do you know Russia?</h4>
             <h4>Answer these questions to find out!</h4>
