updated portfolio link and on hover colors

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 
     <header>
-        <p class="links"> <a href="https://github.com/WillieEdwards/gif-tastic">GitHub Repo</a> | <a
-                href="https://willieedwards.github.io/bootstrap-portfolio/portfolio.html">Portfolio</a></p>
+        <p class="links"> <a href="https://github.com/WillieEdwards/trivia-game">GitHub Repo</a> | <a
+                href="https://willieedwards.github.io/portfolio/">Portfolio</a></p>
     </header>
     <br>
     <br>
