updated portfolio link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header>
         <p class="links"> <a href="https://github.com/WillieEdwards/trivia-game">GitHub Repo</a> | <a
-                href="https://willieedwards.github.io/portfolio/">Portfolio</a></p>
+                href="https://willieedwards.github.io/portfolio/#portfolio">Portfolio</a></p>
     </header>
     <br>
     <br>
